--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ traceback.txt
 errors.txt
 log.txt
 
-*.rpyc
+/game/volumes/points.txt
 /game/saves/
 /game/cache/
 /game/.old/
-/game/volumes/points.txt
+/game/tl/
+
+*.rpyc
